@@ -133,15 +133,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
         http://people.apache.org/~jorton/httpd-2.0.x-CVE-2007-3304.patch
       +1: jorton, jim, rpluem
 
-    * Backport 520733; more helpful LoadModule feedback, so it reads;
-          Syntax error in -C/-c directive:
-          API module structure 'ftp_module' in file /.../modules/mod_ftp.so 
-          is garbled - expected signature 41503230 but saw 41503232 -
-          perhaps this is not an Apache module DSO, or was compiled 
-          for a different Apache version?
-       http://svn.apache.org/viewvc?view=rev&rev=520733
-       +1: wrowe, sctemme, rpluem
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ please place SVN revisions from trunk here, so it is easy to
     identify exactly what the proposed changes are!  Add all new
